--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script>
         msg = "☆";
-    msg = "  acodin.lol  " + msg;position = 0;
+    msg = "  vau.lol  " + msg;position = 0;
     function scrolltitle() {
     document.title = msg.substring(position, msg.length) + msg.substring(0, position); position++;
     if (position > msg.length) position = 0
@@ -22,30 +22,23 @@
         <pre><center>
 
 
-    ▄▄▄       ▄████▄   ▒█████  ▓█████▄  ██▓ ███▄    █       ██▓     ▒█████   ██▓    
-    ▒████▄    ▒██▀ ▀█  ▒██▒  ██▒▒██▀ ██▌▓██▒ ██ ▀█   █      ▓██▒    ▒██▒  ██▒▓██▒    
-    ▒██  ▀█▄  ▒▓█    ▄ ▒██░  ██▒░██   █▌▒██▒▓██  ▀█ ██▒     ▒██░    ▒██░  ██▒▒██░    
-    ░██▄▄▄▄██ ▒▓▓▄ ▄██▒▒██   ██░░▓█▄   ▌░██░▓██▒  ▐▌██▒     ▒██░    ▒██   ██░▒██░    
-      ▓█   ▓██▒▒ ▓███▀ ░░ ████▓▒░░▒████▓ ░██░▒██░   ▓██░ ██▓ ░██████▒░ ████▓▒░░██████▒
-     ▒▒   ▓▒█░░ ░▒ ▒  ░░ ▒░▒░▒░  ▒▒▓  ▒ ░▓  ░ ▒░   ▒ ▒  ▒▓▒ ░ ▒░▓  ░░ ▒░▒░▒░ ░ ▒░▓  ░
-      ▒   ▒▒ ░  ░  ▒     ░ ▒ ▒░  ░ ▒  ▒  ▒ ░░ ░░   ░ ▒░ ░▒  ░ ░ ▒  ░  ░ ▒ ▒░ ░ ░ ▒  ░
-      ░   ▒   ░        ░ ░ ░ ▒   ░ ░  ░  ▒ ░   ░   ░ ░  ░     ░ ░   ░ ░ ░ ▒    ░ ░   
-          ░  ░░ ░          ░ ░     ░     ░           ░   ░      ░  ░    ░ ░      ░  ░
-              ░                  ░                       ░                           
-    
 
+            ██▒   █▓ ▄▄▄       █    ██       ██▓     ▒█████   ██▓    
+            ▓██░   █▒▒████▄     ██  ▓██▒     ▓██▒    ▒██▒  ██▒▓██▒    
+             ▓██  █▒░▒██  ▀█▄  ▓██  ▒██░     ▒██░    ▒██░  ██▒▒██░    
+              ▒██ █░░░██▄▄▄▄██ ▓▓█  ░██░     ▒██░    ▒██   ██░▒██░    
+               ▒▀█░   ▓█   ▓██▒▒▒█████▓  ██▓ ░██████▒░ ████▓▒░░██████▒
+               ░ ▐░   ▒▒   ▓▒█░░▒▓▒ ▒ ▒  ▒▓▒ ░ ▒░▓  ░░ ▒░▒░▒░ ░ ▒░▓  ░
+               ░ ░░    ▒   ▒▒ ░░░▒░ ░ ░  ░▒  ░ ░ ▒  ░  ░ ▒ ▒░ ░ ░ ▒  ░
+                 ░░    ░   ▒    ░░░ ░ ░  ░     ░ ░   ░ ░ ░ ▒    ░ ░   
+                  ░        ░  ░   ░       ░      ░  ░    ░ ░      ░  ░
+                 ░                        ░                           
 
 
         </center></pre>
     </div>
 
-    <center><div class="navbar">
-        <nav>
-            <li><a href="czacik">poczatuj se</a></li>
-            <li><a href="latenights">bityyy uuuu</a></li>
-            <li><a href="revive2000">ciuszki kiedys???</a></li>
-        </nav>
-    </div></center>
+
 
 
 
