--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     window.setTimeout("scrolltitle()",170);
     }
     scrolltitle();
-    </script><style type="text/css" id="operaUserStyle"></style><title>in.lol  ☆  acod</title>
+    </script><style type="text/css" id="operaUserStyle"></style><title>.lol  ☆  vau</title>
     
 </head>
 <body>
     <div class="title">
         <pre><center>
-
+            <body style="color:#ffffff">
 
 
             ██▒   █▓ ▄▄▄       █    ██       ██▓     ▒█████   ██▓    
@@ -42,6 +42,5 @@
 
 
 
-
-
+<body style="background-color:#24192e">
 </body></html>
