--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="title">
         <pre><center>
-            <body style="color:#ffffff">
+            <div style="color:#ffffff">
 
 
             ██▒   █▓ ▄▄▄       █    ██       ██▓     ▒█████   ██▓    
