--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
     </div>
 
 
-
-
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+</div>
 
 <body style="background-color:#343440">
 </body></html>
