--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 
 
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
+    <div id='title'>
+      <span>
+      
+      </span>
+      <br>
+      <span>
+   
+      </span>
+    </div>
+    
     <script>
         msg = "☆";
     msg = "  vau.lol  " + msg;position = 0;
@@ -39,11 +53,7 @@
     </div>
 
 
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <div id='stars'></div>
-    <div id='stars2'></div>
-    <div id='stars3'></div>
-</div>
+
 
 <body style="background-color:#343440">
 </body></html>
