--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="title">
         <pre><center>
-            <div style="color:#ebf0bb">
+            <div style="color:#b32e2e">
 
 
             ██▒   █▓ ▄▄▄       █    ██       ██▓     ▒█████   ██▓    
@@ -55,5 +55,5 @@
 
 
 
-<body style="background-color:#343440">
+<body style="background-color:#18181e">
 </body></html>
